// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addFeedback should create an appropriate action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": undefined,
    "key": "feedback-add",
    "namespace": "default",
    "suffix": "FEEDBACK_ADD",
  },
  "payload": Object {
    "data": Object {
      "foo": "bar",
    },
    "headers": undefined,
    "method": "POST",
    "params": undefined,
    "url": "/users/someone/cohorts/someone/projects/someone/feedback/someone",
  },
  "type": "@@api-client/API_REQUEST/FEEDBACK_ADD",
}
`;

exports[`deleteFeedback should create an appropriate action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": undefined,
    "key": "feedback-delete",
    "namespace": "default",
    "suffix": "FEEDBACK_DELETE",
  },
  "payload": Object {
    "data": undefined,
    "headers": undefined,
    "method": "DELETE",
    "params": undefined,
    "url": "/users/someone/cohorts/someone/projects/someone/feedback/someone",
  },
  "type": "@@api-client/API_REQUEST/FEEDBACK_DELETE",
}
`;

exports[`getFeedback should create an appropriate action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": undefined,
    "key": "user/someone/feedback",
    "namespace": "default",
    "suffix": "FEEDBACK",
  },
  "payload": Object {
    "data": undefined,
    "headers": undefined,
    "method": "GET",
    "params": undefined,
    "url": "/users/someone/cohorts/someone/projects/someone/feedback",
  },
  "type": "@@api-client/API_REQUEST/FEEDBACK",
}
`;

exports[`getFeedbackBySlug should create an appropriate action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": undefined,
    "key": "user/someone/feedback/someone",
    "namespace": "default",
    "suffix": "FEEDBACK_SLUG",
  },
  "payload": Object {
    "data": undefined,
    "headers": undefined,
    "method": "GET",
    "params": undefined,
    "url": "/users/someone/cohorts/someone/projects/someone/feedback/someone",
  },
  "type": "@@api-client/API_REQUEST/FEEDBACK_SLUG",
}
`;

exports[`sendFeedback should create an appropriate action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": undefined,
    "key": "feedback-send",
    "namespace": "default",
    "suffix": "FEEDBACK_SEND",
  },
  "payload": Object {
    "data": undefined,
    "headers": undefined,
    "method": "POST",
    "params": undefined,
    "url": "/users/someone/cohorts/someone/projects/someone/feedback/someone/_send",
  },
  "type": "@@api-client/API_REQUEST/FEEDBACK_SEND",
}
`;

exports[`updateFeedback should create an appropriate action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": undefined,
    "key": "feedback-update",
    "namespace": "default",
    "suffix": "FEEDBACK_UPDATE",
  },
  "payload": Object {
    "data": Object {
      "foo": "bar",
    },
    "headers": undefined,
    "method": "PUT",
    "params": undefined,
    "url": "/users/someone/cohorts/someone/projects/someone/feedback/someone",
  },
  "type": "@@api-client/API_REQUEST/FEEDBACK_UPDATE",
}
`;
